--- a/didi.css
+++ b/didi.css
@@ -307,34 +307,34 @@
 }
 
 /* spacing between */
-.pad-1.space:first-child,.pad-min.space:first-child,.pad-x-1.space:first-child{padding-left:0}
-.pad-1.space:first-child,.pad-min.space:first-child,.pad-y-1.space:first-child{padding-top:0}
-.pad-2.space:first-child,.pad-tiny.space:first-child,.pad-x-2.space:first-child{padding-left:0}
-.pad-2.space:first-child,.pad-tiny.space:first-child,.pad-y-2.space:first-child{padding-top:0}
-.pad-4.space:first-child,.pad-small.space:first-child,.pad-x-4.space:first-child{padding-left:0}
-.pad-4.space:first-child,.pad-small.space:first-child,.pad-y-4.space:first-child{padding-top:0}
-.pad-8.space:first-child,.pad.space:first-child,.pad-medium.space:first-child,.pad-x.space:first-child,.pad-x-8.space:first-child{padding-left:0}
-.pad-8.space:first-child,.pad.space:first-child,.pad-medium.space:first-child,.pad-y.space:first-child,.pad-y-8.space:first-child{padding-top:0}
-.pad-12.space:first-child,.pad-large.space:first-child,.pad-x-12.space:first-child{padding-left:0}
-.pad-12.space:first-child,.pad-large.space:first-child,.pad-y-12.space:first-child{padding-top:0}
-.pad-16.space:first-child,.pad-xlarge.space:first-child,.pad-x-16.space:first-child{padding-left:0}
-.pad-16.space:first-child,.pad-xlarge.space:first-child,.pad-y-16.space:first-child{padding-top:0}
+.pad-1.space:first-child,.pad-min.space:first-child,.pad-x-1.space:first-child,
+.pad-2.space:first-child,.pad-tiny.space:first-child,.pad-x-2.space:first-child,
+.pad-4.space:first-child,.pad-small.space:first-child,.pad-x-4.space:first-child,
+.pad-8.space:first-child,.pad.space:first-child,.pad-medium.space:first-child,.pad-x.space:first-child,.pad-x-8.space:first-child,
+.pad-12.space:first-child,.pad-large.space:first-child,.pad-x-12.space:first-child,
+.pad-16.space:first-child,.pad-xlarge.space:first-child,.pad-x-16.space:first-child,
 .pad-32.space:first-child,.pad-xxlarge.space:first-child,.pad-x-32.space:first-child{padding-left:0}
+.pad-1.space:first-child,.pad-min.space:first-child,.pad-y-1.space:first-child,
+.pad-2.space:first-child,.pad-tiny.space:first-child,.pad-y-2.space:first-child,
+.pad-4.space:first-child,.pad-small.space:first-child,.pad-y-4.space:first-child,
+.pad-8.space:first-child,.pad.space:first-child,.pad-medium.space:first-child,.pad-y.space:first-child,.pad-y-8.space:first-child,
+.pad-12.space:first-child,.pad-large.space:first-child,.pad-y-12.space:first-child,
+.pad-16.space:first-child,.pad-xlarge.space:first-child,.pad-y-16.space:first-child,
 .pad-32.space:first-child,.pad-xxlarge.space:first-child,.pad-y-32.space:first-child{padding-top:0}
 
-.pad-1.space:last-child,.pad-min.space:last-child,.pad-x-1.space:last-child{padding-right:0}
-.pad-1.space:last-child,.pad-min.space:last-child,.pad-y-1.space:last-child{padding-bottom:0}
-.pad-2.space:last-child,.pad-tiny.space:last-child,.pad-x-2.space:last-child{padding-right:0}
-.pad-2.space:last-child,.pad-tiny.space:last-child,.pad-y-2.space:last-child{padding-bottom:0}
-.pad-4.space:last-child,.pad-small.space:last-child,.pad-x-4.space:last-child{padding-right:0}
-.pad-4.space:last-child,.pad-small.space:last-child,.pad-y-4.space:last-child{padding-bottom:0}
-.pad-8.space:last-child,.pad.space:last-child,.pad-medium.space:last-child,.pad-x.space:last-child,.pad-x-8.space:last-child{padding-right:0}
-.pad-8.space:last-child,.pad.space:last-child,.pad-medium.space:last-child,.pad-y.space:last-child,.pad-y-8.space:last-child{padding-bottom:0}
-.pad-12.space:last-child,.pad-large.space:last-child,.pad-x-12.space:last-child{padding-right:0}
-.pad-12.space:last-child,.pad-large.space:last-child,.pad-y-12.space:last-child{padding-bottom:0}
-.pad-16.space:last-child,.pad-xlarge.space:last-child,.pad-x-16.space:last-child{padding-right:0}
-.pad-16.space:last-child,.pad-xlarge.space:last-child,.pad-y-16.space:last-child{padding-bottom:0}
+.pad-1.space:last-child,.pad-min.space:last-child,.pad-x-1.space:last-child,,
+.pad-2.space:last-child,.pad-tiny.space:last-child,.pad-x-2.space:last-child,
+.pad-4.space:last-child,.pad-small.space:last-child,.pad-x-4.space:last-child,
+.pad-8.space:last-child,.pad.space:last-child,.pad-medium.space:last-child,.pad-x.space:last-child,.pad-x-8.space:last-child,
+.pad-12.space:last-child,.pad-large.space:last-child,.pad-x-12.space:last-child,
+.pad-16.space:last-child,.pad-xlarge.space:last-child,.pad-x-16.space:last-child,
 .pad-32.space:last-child,.pad-xxlarge.space:last-child,.pad-x-32.space:last-child{padding-right:0}
+.pad-1.space:last-child,.pad-min.space:last-child,.pad-y-1.space:last-child,
+.pad-2.space:last-child,.pad-tiny.space:last-child,.pad-y-2.space:last-child,
+.pad-4.space:last-child,.pad-small.space:last-child,.pad-y-4.space:last-child,
+.pad-8.space:last-child,.pad.space:last-child,.pad-medium.space:last-child,.pad-y.space:last-child,.pad-y-8.space:last-child,
+.pad-12.space:last-child,.pad-large.space:last-child,.pad-y-12.space:last-child,
+.pad-16.space:last-child,.pad-xlarge.space:last-child,.pad-y-16.space:last-child,
 .pad-32.space:last-child,.pad-xxlarge.space:last-child,.pad-y-32.space:last-child{padding-bottom:0}
 
 .margin-0,.nomargin{ margin: 0 }
@@ -350,8 +350,12 @@
 .vspace-large+.vspace-large,.vspace-12+.vspace-12{margin-top:12}
 .hspace-xlarge+.hspace-xlarge,.hspace-16+.hspace-16{margin-left:16}
 .vspace-xlarge+.vspace-xlarge,.vspace-16+.vspace-16{margin-top:16}
-.hspace-xxlarge+.hspace-xxlarge,.hspace-32+.hspace-32{margin-left:32}
-.hspace-xxlarge+.hspace-xxlarge,.vspace-32+.vspace-32{margin-top:32}
+.hspace-xxlarge+.hspace-xxlarge,.hspace-24+.hspace-24{margin-left:24}
+.vspace-xxlarge+.vspace-xxlarge,.vspace-24+.vspace-24{margin-top:24}
+.hspace-xxxlarge+.hspace-xxxlarge,.hspace-32+.hspace-32{margin-left:32}
+.hspace-xxxlarge+.hspace-xxxlarge,.vspace-32+.vspace-32{margin-top:32}
+.hspace-jumbo+.hspace-jumbo,.hspace-64+.hspace-64{margin-left:32}
+.hspace-jumbo+.hspace-jumbo,.vspace-64+.vspace-64{margin-top:32}
 
 
 /* text alignment */
