--- a/didi.css
+++ b/didi.css
@@ -48,14 +48,21 @@
 .right-border,.border-right { border-right-style: solid }
 .bottom-border,.border-bottom { border-bottom-style: solid }
 .border-top,.top-border { border-top-style: solid }
+
+/* border divider */
+.hdivider+.hdivider { border-left-style: solid }
+.vdivider+.vdivider { border-top-style: solid }
+
+/* border shadow */
 .shadow {box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) }
+
+/* border rounding */
 .rounded-small{border-radius:2px}
 .rounded,.rounded-medium{border-radius:4px}
 .rounded-large{border-radius:8px}
 .rounded-xlarge{border-radius:16px}
 .rounded-xxlarge{border-radius:32px}
 .rounded-jumbo{border-radius:64px}
-
 
 /* clearing */
 .clear{clear:both}
