--- a/didi.css
+++ b/didi.css
@@ -9,6 +9,9 @@
   border-color: #ccc;
 }
 
+.material-icons {
+  font-family: 'Material Icons' !important;
+}
 /* Classed Styles */
 /* animations */
 .spin,.animate-spin{animation:spin 2s infinite linear;-webkit-animation:spin 2s infinite linear}
