--- a/didi.css
+++ b/didi.css
@@ -6,6 +6,23 @@
   position: relative;
 }
 
+.error
+{
+  display: none;
+  padding: 1px;
+  border: 1px solid lightgrey;
+  background: #fffff0;
+  width: 95%;
+  color: red;
+  font-weight: normal;
+  color: red;
+  -moz-box-shadow: 3px 3px 4px #0f0f0f;
+  -webkit-box-shadow: 3px 3px 4px #0f0f0f;
+  box-shadow: 3px 3px 4px #0f0f0f;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Classed Styles */
 /* animations */
 .spin,.animate-spin{animation:spin 2s infinite linear;-webkit-animation:spin 2s infinite linear}
