ensure error box in on a new line

--- a/didi.css
+++ b/didi.css
@@ -9,7 +9,8 @@
 
 .error
 {
-  display: none;
+  display: block;
+  clear: both;
   padding: 1px;
   border: 1px solid lightgrey;
   background: #fffff0;
