--- a/didi.css
+++ b/didi.css
@@ -56,7 +56,7 @@
 @keyframes animatezoom{from{transform:scale(0)} to{transform:scale(1)}}
 
 /* border styles */
-.border-thin { border-style: solid; border-width: 1px}
+.border-thin,.border { border-style: solid; border-width: 1px}
 .border-small { border-style: solid; border-width: 2px;}
 .border-medium { border-style: solid; border-width: 4px}
 .border-large { border-style: solid; border-width: 8px}
